<resources>
    <string name="app_name">Red Social UCA</string>
    <string name="RegistrarBTN">Registrarse</string>
    <string name="LoginBTN">Iniciar Sesion</string>
    <string name="RegistrarTXT">REGISTRATE</string>

    <!--aqui comiensan los atributos del registro-->


    <string name="Nombre">Nombres</string>
    <string name="Apellido">Apellidos</string>
    <string name="Correo">Correo Electronico</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Edad">Edad</string>
    <string name="Resgistrarse">Registrarse</string>


</resources>