<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:layout_gravity="center"
    tools:context=".Registro">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/RegistrarTXT"
            android:textColor="#023470"
            android:textSize="24sp"
            android:textStyle="bold">

        </TextView>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/iniciar_sesion"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <!--nombre-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nombre"
            android:textStyle="italic"
            android:inputType="textPersonName">

        </EditText>

        <!--apellidos-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/Apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Apellido"
            android:textStyle="italic"
            android:inputType="textPersonName">

        </EditText>
        <!--edad-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/Edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Edad"
            android:textStyle="italic"
            android:inputType="date">

        </EditText>

        <!--correo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/Correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Correo"
            android:textStyle="italic"
            android:inputType="textPersonName">

        </EditText>
        <!--contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/Contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Contraseña"
            android:textStyle="italic"
            android:inputType="textPersonName">
        </EditText>
        <Button
            android:id="@+id/Registarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Resgistrarse"
            android:textStyle="italic"
            android:layout_marginTop="40dp"/>





    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
